include/livesplit_core.h

struct RunMetadata_s;
typedef struct RunMetadata_s *restrict RunMetadata;
typedef struct RunMetadata_s *restrict RunMetadataRefMut;
typedef struct RunMetadata_s const* RunMetadataRef;
struct RunMetadataVariable_s;
typedef struct RunMetadataVariable_s *restrict RunMetadataVariable;
typedef struct RunMetadataVariable_s *restrict RunMetadataVariableRefMut;
typedef struct RunMetadataVariable_s const* RunMetadataVariableRef;
struct RunMetadataVariablesIter_s;
typedef struct RunMetadataVariablesIter_s *restrict RunMetadataVariablesIter;
typedef struct RunMetadataVariablesIter_s *restrict RunMetadataVariablesIterRefMut;
typedef struct RunMetadataVariablesIter_s const* RunMetadataVariablesIterRef;
/**
Accesses the speedrun.com Run ID of the run. This Run ID specify which
Record on speedrun.com this run is associated with. This should be
changed once the Personal Best doesn't match up with that record
anymore. This may be empty if there's no association.
*/
char const* RunMetadata_run_id(RunMetadataRef self);
/**
Accesses the name of the platform this game is run on. This may be empty
if it's not specified.
*/
char const* RunMetadata_platform_name(RunMetadataRef self);
/**
Returns true if this speedrun is done on an emulator. However false
may also indicate that this information is simply not known.
*/
bool RunMetadata_uses_emulator(RunMetadataRef self);
/**
Accesses the name of the region this game is from. This may be empty if
it's not specified.
*/
char const* RunMetadata_region_name(RunMetadataRef self);
/**
Returns an iterator iterating over all the variables and their values
that have been specified.
*/
RunMetadataVariablesIter RunMetadata_variables(RunMetadataRef self);
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void RunMetadataVariable_drop(RunMetadataVariable self);
/**
Accesses the name of this Run Metadata variable.
*/
char const* RunMetadataVariable_name(RunMetadataVariableRef self);
/**
Accesses the value of this Run Metadata variable.
*/
char const* RunMetadataVariable_value(RunMetadataVariableRef self);
/**
Frees the object, allowing it to clean up all of its memory. You need
to call this for every object that you don't use anymore and hasn't
already been freed.
*/
void RunMetadataVariablesIter_drop(RunMetadataVariablesIter self);
/**
Accesses the next Run Metadata variable. Returns NULL if there are no more
variables.
*/
RunMetadataVariableRef RunMetadataVariablesIter_next(RunMetadataVariablesIterRefMut self);